wip: set up major functions

--- a/index.html
+++ b/index.html
@@ -52,33 +52,33 @@
         <div class="row guess">
             <div class="col-md-4"></div>
             <div class="col-md-2">
-                <button type="button" class="btn btn-light btn-lg" id="random-number">Random Number:</button>
+                <button type="button" class="btn btn-light btn-lg" id="randomNumber">Random Number:</button>
             </div>
             <div class="col-md-2" id="tally">
                 <h3 class="message"></h3>
-                <h3>Wins:</h3>
-                <h3>Losses:</h3>
+                <h3 id="numberWins">Wins:</h3>
+                <h3 id="numberLosses">Losses:</h3>
             </div>
         </div>
 
         <div class="row crystals">
             <div class="col-md-3">
-                <button type="button" class="crystal"><img src="assets/images/amethyst.jpg" alt="amethyst"></button>
+                <button type="button" class="crystal" id="one"><img src="assets/images/amethyst.jpg" alt="amethyst"></button>
             </div>
             <div class="col-md-3">
-                <button type="button" class="crystal"><img src="assets/images/blueCrystal.jpg" alt="blue-crystal"></button>
+                <button type="button" class="crystal" id="two"><img src="assets/images/blueCrystal.jpg" alt="blue-crystal"></button>
             </div>
             <div class="col-md-3">
-                <button type="button" class="crystal"><img src="assets/images/brightBlue.jpg" alt="bright-blue"></button>
+                <button type="button" class="crystal" id="three"><img src="assets/images/brightBlue.jpg" alt="bright-blue"></button>
             </div>
             <div class="col-md-3">
-                <button type="button" class="crystal"><img src="assets/images/lotus.jpg" alt="lotus"></button>
+                <button type="button" class="crystal" id="four"><img src="assets/images/lotus.jpg" alt="lotus"></button>
             </div>
         </div>
 
         <div class="row score">
             <div class="col-md-4"></div>
-            <div class="col-md-4" id="score">
+            <div class="col-md-4" id="finalTotal">
                 <h2>Your Score:</h2>
             </div>
         </div>
