fixed js link in html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     </div>
     <!-- My javascript link -->
-    <script src="assets/JavaScript/game.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
