fixed image name to render correctly.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     alt="bright-blue"></div>
         </div>
         <div class="col-2">
-            <div class="crystal" id="four"><img src="assets/images/lotus.jpg" alt="lotus"></div>
+            <div class="crystal" id="four"><img src="assets/images/flower.jpg" alt="lotus"></div>
         </div>
         <div class="col-2"></div>
     </div>
